# jin

./: .gitignore  Cargo.toml  README.md  build.rs  jin.c  lints.toml  run.fish  run.sh  run_all_tests.fish  run_examples.fish  run_test.fish  run_tests.fish  rustfmt.toml  show.fish
.github/workflows/: check-and-lint.yaml  (+2 more)
compiler/: Cargo.toml  build.rs
compiler/goldentests/: anon_fn.jin
compiler/src/: ast.rs  cgen.rs  counter.rs  db.rs  diagnostics.rs  hir.rs  main.rs  mangle.rs  middle.rs  mir.rs  parse.rs  span.rs  sym.rs  target.rs  ty.rs  typeck.rs  typeck2.rs  util.rs  word.rs
compiler/src/ast/: pretty_print.rs  token.rs
compiler/src/cgen/: builtin.rs  generate.rs  global_init.rs  microsoft_craziness.rs  name_gen.rs  ty.rs  util.rs
compiler/src/data_structures/: index_vec.rs
compiler/src/db/: build_options.rs  timing.rs
compiler/src/hir/: pretty_print.rs  subst.rs  visit.rs
compiler/src/mir/: builder.rs  lower.rs  monomorphize.rs  ownck.rs  pmatch.rs  pretty_print.rs  specialize.rs  subst.rs  validate.rs
compiler/src/parse/: errors.rs  lexer.rs  parse_modules.rs  parser.rs  token.rs  tyexpr.rs
compiler/src/parse/parser/: expr.rs  import.rs  item.rs  pmatch.rs  tydef.rs  tyexpr.rs
compiler/src/ty/: coerce.rs  fold.rs  printer.rs  size.rs
compiler/src/typeck/: attrs.rs  builtins.rs  coerce.rs  collect.rs  define.rs  env.rs  errors.rs  exprs.rs  fns.rs  imports.rs  items.rs  late.rs  lookup.rs  normalize.rs  ns.rs  pmatch.rs  resolution_state.rs  subst.rs  tyexpr.rs  types.rs  unify.rs
compiler/src/typeck/late/: check_bodies.rs  check_main.rs  cyclic_globals.rs  leaky_items.rs
compiler/src/typeck2/: attrs.rs  coerce.rs  define.rs  define_extern_imports.rs  errors.rs  expr.rs  exprs.rs  fns.rs  imports.rs  items.rs  lets.rs  lookup.rs  normalize.rs  ns.rs  pmatch.rs  subst.rs  tyexpr.rs  types.rs  unify.rs
compiler/src/typeck2/late/: check_bodies.rs
compiler/tests/: array_test.jin  associated_fns.jin  bitwise.jin  callbacks.jin  golden_tests.rs  loop.jin  ownership.jin  pmatch2.jin  poly_types.jin  priv.jin  raylib.jin  slices.jin  swap_op.jin  union_move.jin  value_types.jin
compiler/tests/fn_overloading/: child.jin
compiler/tests/glob_imports/a/: b.jin
compiler/tests/imports/: bar.jin  ufcs.jin
compiler/tests/imports/bar/: baz.jin
compiler/tests/poly_types/: inner.jin
compiler/tests/priv/: b.jin  c.jin
compiler/tests/raylib/: basic_window.jin  bindings.jin  input_keys.jin
compiler/tests/struct_vis/: child.jin
compiler_ast/: Cargo.toml
compiler_ast/src/: lib.rs  pretty.rs
compiler_backend_c/: Cargo.toml
compiler_backend_c/src/: builtin.rs  generate.rs  global_init.rs  lib.rs  microsoft_craziness.rs  name_gen.rs  ty.rs  util.rs
compiler_cli/: Cargo.toml  build.rs
compiler_cli/src/: main.rs
compiler_core/: Cargo.toml  build.rs
compiler_core/src/: ast.rs  cgen.rs  counter.rs  db.rs  diagnostics.rs  hir.rs  lib.rs  macros.rs  mangle.rs  middle.rs  mir.rs  parse.rs  qpath.rs  span.rs  subst.rs  sym.rs  target.rs  ty.rs  typeck.rs  util.rs  word.rs
compiler_core/src/cgen/: builtin.rs  name_gen.rs  util.rs
compiler_core/src/db/: build_options.rs  timing.rs
compiler_core/src/hir/: pretty.rs  subst.rs  visit.rs
compiler_core/src/mir/: builder.rs  monomorphize.rs  ownck.rs  pmatch.rs  pretty_print.rs
compiler_core/src/parse/: lexer.rs  parser.rs
compiler_core/src/parse/parser/: expr.rs  import.rs  item.rs  pmatch.rs  tyexpr.rs
compiler_core/src/ty/: coerce.rs  fold.rs  printer.rs  size.rs
compiler_core/src/typeck/: attrs.rs  errors.rs  exprs.rs  fns.rs  lookup.rs  subst.rs  tyexpr.rs  types.rs  unify.rs
compiler_core/src/typeck/late/: check_main.rs  cyclic_globals.rs
compiler_data_structures/: Cargo.toml
compiler_helpers/: Cargo.toml
compiler_mir/: Cargo.toml
compiler_mir/src/: builder.rs  lib.rs  lower.rs  monomorphize.rs  ownck.rs  pmatch.rs  pretty.rs  pretty_print.rs  subst.rs
compiler_mir/src/lower/: eval.rs
compiler_parse/: Cargo.toml
compiler_parse/src/: errors.rs  layout.rs  lexer.rs  lib.rs  parser.rs  token.rs
compiler_parse/src/parser/: expr.rs  import.rs  item.rs  pmatch.rs  tydef.rs  tyexpr.rs
compiler_typeck/: Cargo.toml
compiler_typeck/src/: attrs.rs  builtins.rs  coerce.rs  define.rs  errors.rs  exprs.rs  fns.rs  helpers.rs  hooks.rs  imports.rs  items.rs  late.rs  lib.rs  lookup.rs  normalize.rs  ns.rs  pmatch.rs  subst.rs  ty.rs  tyexpr.rs  types.rs  unify.rs
compiler_typeck/src/late/: check_bodies.rs  check_main.rs  cyclic_globals.rs  leaky_items.rs
data_structures/: Cargo.toml
examples/: binary-search.jin  binary_search.jin  bubble-sort.jin  bubble_sort.jin  file2.txt  fs.jin  linked-list.jin  linked_list.jin  quick-sort.jin  quick_sort  quick_sort.jin  read-file.jin
rt/: build.sh  build.zig  jin.c  jinrt.c  jinrt.h  jinrt.zig
src/: analysis.rs  ast.rs  cgen.rs  check.rs  codegen.rs  common.rs  counter.rs  data_structures.rs  database.rs  db.rs  diagnostics.rs  hir.rs  hir_analysis.rs  id_map.rs  index_vec.rs  infer.rs  lexer.rs  llvm.rs  main.rs  mangle.rs  middle.rs  mir.rs  name_resolution.rs  ownck.rs  parse.rs  parse_modules.rs  parser.rs  passes.rs  qpath.rs  resolve.rs  scopes.rs  sema.rs  span.rs  state.rs  subst.rs  sym.rs  target.rs  tast.rs  tir.rs  tokenize.rs  (+4 more)
std/: array.jin  bool.jin  builtin.jin  c.jin  char.jin  collections.jin  fs.jin  int.jin  io.jin  main.jin  option.jin  os.jin  panicking.jin  prelude.jin  ptr.jin  result.jin  slice.jin  std.jin  str.jin
tests/: anon-fn.jin  anon_fn.jin  array-test.jin  array_test.jin  associated-fns.jin  associated_fns.jin  bar.jin  bitwise.jin  callbacks.jin  demo.jin  destroy-poly.jin  destroy_poly  destroy_poly.jin  drop-hook.jin  empty.jin  extern_structs.jin  extern_types.jin  floats.jin  fn-overloading.jin  fn_overloading.jin  foo.c  foo.jin  glob-imports.jin  glob_imports.jin  golden_tests.rs  hello-world.jin  hello_world.jin  hooks.jin  imports.jin  loop.jin  mir_test.jin  overflow.jin  ownership.jin  panics.jin  pmatch.jin  pmatch2.jin  poly-types.jin  poly_types.jin  priv.jin  raylib.jin  (+36 more)
(+235 files in other folders)
