[workspace]
members = ["compiler_cli", "compiler_core", "compiler_data_structures"]
resolver = "2"

[workspace.dependencies]
execute = "0.2.12"
camino = "1.1.6"
anyhow = "1.0.75"

[workspace.lints.clippy]
correctness = "warn"
suspicious = "warn"
style = "warn"
complexity = "warn"
perf = "warn"
# pedantic = "warn"
similar_names = "allow"
module_name_repetitions = "allow"
too_many_lines = "allow"
missing_const_for_fn = "allow"
cast_possible_truncation = "allow"
wildcard_imports = "allow"
