[workspace]
members = [ "compiler_ast",
	"compiler_backend_c",
	"compiler_cli",
	"compiler_core",
	"compiler_data_structures",
	"compiler_helpers", "compiler_mir", "compiler_parse", "compiler_typeck",
]
resolver = "2"

[workspace.dependencies]
codespan-reporting = "0.11.1"
ena = "0.14.2"
ustr = "1.0.0"
execute = "0.2.12"
camino = "1.1.6"
anyhow = "1.0.75"
rustc-hash = "1.1.0"
pretty = "0.12.3"
typed-index-collections = "3.1.0"
itertools = "0.12.0"
path-absolutize = "3.1.0"

[workspace.lints.clippy]
correctness = "warn"
suspicious = "warn"
style = "warn"
complexity = "warn"
perf = "warn"
# pedantic = "warn"
similar_names = "allow"
module_name_repetitions = "allow"
too_many_lines = "allow"
missing_const_for_fn = "allow"
cast_possible_truncation = "allow"
wildcard_imports = "allow"
