[package]
name = "jin"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "jin"
path = "src/main.rs"

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
codespan-reporting = "0.11.1"
color-eyre = "0.6.2"
derive_more = "0.99.17"
ena = "0.14.2"
enum-as-inner = "0.6.0"
owo-colors = "3.5.0"
path-absolutize = "3.1.0"
ptree = "0.4.0"
ustr = "0.10.0"
libc = "0.2"
execute = "0.2.12"
anyhow = "1.0.75"
internment = "0.7.1"
lazy_static = "1.4.0"
rustc-hash = "1.1.0"
camino = "1.1.6"
typed-index-collections = "3.1.0"
pretty = "0.12.3"
itertools = "0.12.0"
indexmap = "2.1.0"
bitflags = "2.4.2"
compiler_data_structures = { path = "../compiler_data_structures" }
petgraph = "0.6.4"
graph-cycles = "0.1.0"

[target.'cfg(windows)'.dependencies]
libc = "0.2.132"
widestring = "1.0.2"
winapi = { version = "0.3.9", features = [
  "winuser",
  "impl-default",
  "oleauto",
] }

[dev-dependencies]
goldentests = "1.1.0"

[build-dependencies]
fs_extra = "1.2.0"

[lints]
workspace = true
