[package]
name = "compiler_backend_c"
version = "0.1.0"
edition = "2021"

[dependencies]
compiler_core = { path = "../compiler_core" }
compiler_helpers = { path = "../compiler_helpers" }
compiler_data_structures = { path = "../compiler_data_structures" }
compiler_mir = { path = "../compiler_mir" }
codespan-reporting = { workspace = true }
ustr = { workspace = true }
rustc-hash = { workspace = true }
execute = { workspace = true }
camino = { workspace = true }
pretty = { workspace = true }

[target.'cfg(windows)'.dependencies]
libc = "0.2"
widestring = "1.0.2"
winapi = { version = "0.3.9", features = [
	"winuser",
	"impl-default",
	"oleauto",
] }

[lints]
workspace = true
