[package]
name = "compiler_parse"
version = "0.1.0"
edition = "2021"

[dependencies]
compiler_core = { path = "../compiler_core" }
compiler_ast = { path = "../compiler_ast" }
compiler_data_structures = { path = "../compiler_data_structures" }
compiler_helpers = { path = "../compiler_helpers" }
codespan-reporting = { workspace = true }
ustr = { workspace = true }
rustc-hash = { workspace = true }
anyhow = { workspace = true }
camino = { workspace = true }
path-absolutize = { workspace = true }

[lints]
workspace = true
